--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
   <body>
     <main>
       <div class="card">
-        <div class="card-image">
-          <div class="overlay"></div>
-        </div>
+        <div class="card-image"></div>
         <div class="card-body">
           <div class="card-body-header">
             <h1>Get <span>insights</span> that help your business grow.</h1>
